--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19,6 +19,7 @@ body {
     width: 300px;
     background-color: black;
     color: #ecf0f1;
+    height: 130vh;
     padding: 20px;
     display: flex;
     flex-direction: column;
