--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -37,3 +37,68 @@ h2{
     padding-bottom: 23px;
     text-align: end;
 }
+#BlogsTable_filter{
+    padding-bottom: 10px;
+}
+.filter-container {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 14px;
+}
+
+.filter-container h4 {
+    font-size: 20px;
+    color: black;
+    margin-bottom: 15px;
+}
+
+.filter {
+    display: flex;
+    gap: 15px;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.filter label {
+    font-size: 16px;
+    color: #333;
+}
+
+.filter input[type="date"] {
+    padding: 8px;
+    font-size: 14px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+    width: 150px;
+    transition: border-color 0.3s ease;
+}
+
+.filter input[type="date"]:focus {
+    border-color: black;
+    outline: none;
+}
+
+.filter button {
+    padding: 8px 16px;
+    background-color: azure;
+    color: black;
+    font-size: 16px;
+    border: none;
+    background: azure;
+     border-radius: 5px;
+    border: 1px solid black;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.filter button:hover {
+    background-color: grey;
+}
+.dataTables_filter{
+    padding-bottom: 10px;
+    margin-top: 10px;
+    
+}
