--- a/public/css/app.css
+++ b/public/css/app.css
@@ -274,7 +274,7 @@ body {
     color: #f1f1f1;
   }
   .main {
-    margin-left: 200px; /* Same as the width of the sidenav */
+    /* Same as the width of the sidenav */
     font-size: 20px; /* Increased text to enable scrolling */
     padding: 0px 10px;
   }
