--- a/public/css/register.css
+++ b/public/css/register.css
@@ -1,366 +1,358 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 body {
-	font-family: Verdana, Geneva, sans-serif;
-	font-size: 14px;
-	background: #f2f2f2;
+  font-family: 'Inter', sans-serif;
+  background-color: #f0f4f8;
+  color: #333;
 }
-.clearfix {
-	&:after {
-		content: "";
-		display: block;
-		clear: both;
-		visibility: hidden;
-		height: 0;
-	}
-}
-.form_wrapper {
-	background: #fff;
-	width: 400px;
-	max-width: 100%;
-	box-sizing: border-box;
-	padding: 25px;
-	margin: 8% auto 0;
-	position: relative;
-	z-index: 1;
-	border-top: 5px solid grey;
-	-webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
-	-moz-box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
-	box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
 
+.dashboard {
+  display: flex;
+  height: 100vh;
+  flex-direction: row;
+  transition: all 0.3s ease;
+}
 
-	h2 {
-		font-size: 1.5em;
-		line-height: 1.5em;
-		margin: 0;
-	}
-	.title_container {
-		text-align: center;
-		padding-bottom: 15px;
-	}
-	h3 {
-		font-size: 1.1em;
-		font-weight: normal;
-		line-height: 1.5em;
-		margin: 0;
-	}
-    label {
-        font-size: 12px;
-    }
-	.row {
-		margin: 10px -15px;
-		>div {
-			padding: 0 15px;
-			box-sizing: border-box;
-		}
-	}
-	.col_half {
-		width: 50%;
-		float: left;
-	}
-	.input_field {
-		position: relative;
-		margin-bottom: 20px;
-      
-		>span {
-			position: absolute;
-			left: 0;
-			top: 0;
-			color: #333;
-			height: 97%;
-			border-right: 1px solid grey;
-			text-align: center;
-			width: 30px;
-			>i {
-				padding-top: 10px;
-			}
-		}
-	}
-	.textarea_field {
-		>span {
-			>i {
-				padding-top: 10px;
-			}
-		}
-	}
-	input {
-    &[type="text"], &[type="email"], &[type="password"] {
-      width: 100%;
-      padding: 8px 10px 9px 35px;
-      height: 35px;
-      border: 1px solid grey;
-      box-sizing: border-box;
-      outline: none;
-      -webkit-transition: all 0.30s ease-in-out;
-      -moz-transition: all 0.30s ease-in-out;
-      -ms-transition: all 0.30s ease-in-out;
-      transition: all 0.30s ease-in-out;
-    }
-    &[type="text"]:hover, &[type="email"]:hover, &[type="password"]:hover {
-      background: #fafafa;
-    }
-    &[type="text"]:focus, &[type="email"]:focus, &[type="password"]:focus {
-      -webkit-box-shadow: 0 0 2px 1px rgba(255, 169, 0, 0.5);
-      -moz-box-shadow: 0 0 2px 1px rgba(255, 169, 0, 0.5);
-      box-shadow: 0 0 2px 1px rgba(255, 169, 0, 0.5);
-      border: 1px solid yellow;
-      background: #fafafa;
-    }
-    &[type="submit"] {
-		background: grey;
-		height: 35px;
-		line-height: 35px;
-		width: 100%;
-		border: none;
-		outline: none;
-		cursor: pointer;
-		color: #fff;
-		font-size: 1.1em;
-		margin-bottom: 10px;
-		-webkit-transition: all 0.30s ease-in-out;
-		-moz-transition: all 0.30s ease-in-out;
-		-ms-transition: all 0.30s ease-in-out;
-		transition: all 0.30s ease-in-out;
-		&:hover {
-			background: darken(yellow,7%);
-		}
-		&:focus {
-			background: darken(yellow,7%);
-		}
-	}    
-    &[type="checkbox"], &[type="radio"] {
-      border: 0;
-      clip: rect(0 0 0 0);
-      height: 1px;
-      margin: -1px;
-      overflow: hidden;
-      padding: 0;
-      position: absolute;
-      width: 1px;
-    }
-  }
+.sidebar {
+  width: 300px;
+  background-color: black;
+  color: #ecf0f1;
+  padding: 20px;
+  display: flex;
+  height: 220vh !important;
+  flex-direction: column;
+  transition: width 0.3s ease;
 }
-.form_container {
-	.row {
-		.col_half.last {
-			border-left: 1px solid grey;
-		}
-	}
-}
-.checkbox_option{
-    label{
-        margin-right: 1em;
-        position: relative;
-        &:before {
-          content: "";
-          display: inline-block;
-          width: 0.5em;
-          height: 0.5em;
-          margin-right: 0.5em;
-          vertical-align: -2px;
-          border: 2px solid grey;
-          padding: 0.12em;
-          background-color: transparent;
-          background-clip: content-box;
-          transition: all 0.2s ease;
-        }
-        &:after {
-          border-right: 2px solid black;
-          border-top: 2px solid black;
-          content: "";
-          height: 20px;
-          left: 2px;
-          position: absolute;
-          top: 7px;
-          transform: scaleX(-1) rotate(135deg);
-          transform-origin: left top;
-          width: 7px;
-          display: none;
-        }
-    }
-    input {
-    &:hover + label:before {
-      border-color: black;
-    }
-    &:checked + label {
-      &:before {
-        border-color: black;
-      }
-      &:after {
-        -moz-animation: check 0.8s ease 0s running;
-        -webkit-animation: check 0.8s ease 0s running;
-        animation: check 0.8s ease 0s running;
-        display: block;
-        width: 7px;
-        height: 20px;
-        border-color: black;
-      }
-    }
-  }
-}
-.radio_option {
-  label {
 
-      margin-right: 1em;
-    &:before {
-      content: "";
-      display: inline-block;
-      width: 0.5em;
-      height: 0.5em;
-      margin-right: 0.5em;
-      border-radius: 100%;
-      vertical-align: -3px;
-      border: 2px solid grey;
-      padding: 0.15em;
-      background-color: transparent;
-      background-clip: content-box;
-      transition: all 0.2s ease;
-    }
-  }
-  input {
-    &:hover + label:before {
-      border-color: black;
-    }
-    &:checked + label:before {
-      background-color: black;
-      border-color: black;
-    }
-  }
+.sidebar-header h1 {
+  font-size: 40px;
+  margin-bottom: 30px;
+  color: #3498db;
 }
-.select_option {
+
+.sidebar-nav ul {
+  list-style-type: none;
+  margin-top: 30px;
+}
+
+.sidebar-nav li {
+  margin-bottom: 15px;
+  font-size: 20px;
+}
+.sidebar-nav{
+  padding: 0px 0px;
+}
+.sidebar-nav a {
+  color: #ecf0f1;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  padding: 12px;
+  border-radius: 8px;
+  transition: all 0.3s ease;
+}
+
+.sidebar-nav a:hover,
+.sidebar-nav a.active {
+  
+  transform: translateX(5px);
+}
+
+.sidebar-nav i {
+  margin-right: 10px;
+  font-size: 18px;
+}
+
+.main-content {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
+.top-bar {
+  background-color: black;
+  padding: 10px 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+/* .top-bar {
+  background-color: #2c3e50;
+  padding: 10px 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+} */
+
+.search-bar {
+  display: flex;
+  align-items: center;
+  background-color: #ecf0f1;
+  border-radius: 10px;
+}
+
+.search-bar input {
+  padding: 10px 15px;
+  border: none;
+  background-color: transparent;
+  font-size: 16px;
+  width: 300px;
+  border-radius: 7px;
+}
+
+.search-bar button {
+  background-color: transparent;
+  color: #3498db;
+  border: none;
+  padding: 8px;
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+
+.search-bar button:hover {
+  color: #2980b9;
+}
+
+.dropdown {
   position: relative;
-  width: 100%;
-  select {
-    display: inline-block;
-    width: 100%;
-    height: 35px;
-    padding: 0px 15px;
-    cursor: pointer;
-    color: #7b7b7b;
-    border: 1px solid grey;
-    border-radius: 0;
-    background: #fff;
-    appearance: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    transition: all 0.2s ease;
-    &::-ms-expand {
-      display: none;
-    }
-    &:hover, &:focus {
-      color: black;
-      background: #fafafa;
-      border-color: black;
-      outline: none;
-    }
-  }
-}
-.select_arrow {
-  position: absolute;
-  top: calc(50% - 4px);
-  right: 15px;
-  width: 0;
-  height: 0;
-  pointer-events: none;
-  border-width: 8px 5px 0 5px;
-  border-style: solid;
-  border-color: #7b7b7b transparent transparent transparent;
+  display: inline-block;
+  padding-right: 63px;
+  border-radius: 10px;
+
 }
 
-.select_option select {
-  &:hover + .select_arrow, &:focus + .select_arrow {
-    border-top-color: black;
-  }
+.dropbtn {
+  background-color: azure;
+  color: black;
+  padding: 16px;
+  font-size: 13px;
+  border: none;
+  border-radius: 7px;
+  
+ 
 }
-.credit {
-	position: relative;
-	z-index: 1;
-	text-align: center;
-	padding: 15px;
-	color: yellow;
-	a {
-		color: darken(yellow,7%);
-	}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  font-size: 15px;
+  text-align: center;
+  border-radius: 15px;
 }
-p {
-   display: block;
-    left: 10px;
-    top: 10px;
-    color: red;
+
+.dropdown-content a {
+  color: #333;
+  padding: 10px 15px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #ecf0f1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+h1.header {
+  font-size: 36px;
+  text-align: center;
+  margin-top: 50px;
+  color: black;
+}
+
+.form1 {
+  background: #fff;
+  padding: 30px;
+  margin: 20px auto;
+  width: 80%;
+  max-width: 800px;
+  border-radius: 15px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.form1 .input-group {
+  margin-bottom: 20px;
+}
+
+.input-group label {
+  font-size: 16px;
+  color: #333;
+  display: block;
+  margin-bottom: 5px;
+}
+
+.input-group input,
+.input-wrapper textarea {
+  width: 100%;
+  padding: 12px;
+  border-radius: 7px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+  box-sizing: border-box;
+}
+
+.input-group input[type="date"] {
+  padding-left: 15px;
+}
+
+.input-group .error-message {
+  color: red;
+  font-size: 14px;
+}
+
+.submit button {
+  background-color: azure;
+  color: black;
+  padding: 12px 20px;
+  font-size: 18px;
+  border-radius: 10px;
+  width: 100%;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.submit button:hover {
+  background-color: #2980b9;
+}
+
+.submit {
+  margin-top: 30px;
+  text-align: center;
+      border-radius: 10px;
+}
+#news_title_category {
+  width: 100%;
+  padding: 12px;
+  border-radius: 7px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+  box-sizing: border-box;
+  background-color: #fff;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+#news_title_category:focus {
+  outline: none;
+  border-color: #3498db;
+}
+
+/* Optional: Custom arrow for the select dropdown */
+#news_title_category::-ms-expand {
+  display: none;
+}
+#blog_title_category {
+  width: 100%;
+  padding: 12px;
+  border-radius: 7px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+  box-sizing: border-box;
+  background-color: #fff;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+#blog_title_category:focus {
+  outline: none;
+  border-color: #3498db;
+}
+
+/* Optional: Custom arrow for the select dropdown */
+#blog_title_category::-ms-expand {
+  display: none;
 }
 textarea {
-    resize: none;
+  resize: none;
+}
+textarea.ta10em {
+  height: 10em;
+  width: 55em;
+  padding: 8px 10px 9px 35px;
+  border-radius: 10px;
+
+}
+p{
+  color: red;
+}
+@media (max-width: 768px) {
+  .dashboard {
+      flex-direction: column;
   }
-  textarea.ta10em {
-    height: 5em;
-    width: 23em;
-    padding: 8px 10px 9px 35px;
 
+  .sidebar {
+      width: 100%;
+      padding: 10px;
+      position: absolute;
+      top: 0;
+      left: 0;
   }
-@-webkit-keyframes check {
-  0% { height: 0; width: 0; }
-  25% { height: 0; width: 7px; }
-  50% { height: 20px; width: 7px; }
+
+  .sidebar-nav ul {
+      display: flex;
+      justify-content: space-between;
+      padding: 10px;
+      flex-wrap: wrap;
+  }
+
+  .sidebar-nav a {
+      font-size: 14px;
+      padding: 8px 12px;
+  }
+
+  .main-content {
+      margin-top: 80px;
+  }
+
+  .search-bar input {
+      width: 200px;
+      margin-right: 10px;
+  }
+
+  .header {
+      font-size: 30px;
+  }
+
+  .form1 {
+      width: 90%;
+  }
+
+  .input-group input {
+      width: 100%;
+  }
+
+  .submit button {
+      font-size: 16px;
+     
+  }
 }
 
-@keyframes check {
-  0% { height: 0; width: 0; }
-  25% { height: 0; width: 7px; }
-  50% { height: 20px; width: 7px; }
-}
+@media (max-width: 480px) {
+  .sidebar {
+      width: 100%;
+      padding: 10px;
+  }
 
-@-webkit-keyframes expand { 
-	0% { -webkit-transform: scale3d(1,0,1); opacity:0; }
-	25% { -webkit-transform: scale3d(1,1.2,1); }
-	50% { -webkit-transform: scale3d(1,0.85,1); }
-	75% { -webkit-transform: scale3d(1,1.05,1); }
-	100% { -webkit-transform: scale3d(1,1,1);  opacity:1; }
-}
+  .sidebar-nav a {
+      font-size: 12px;
+  }
 
-@keyframes expand { 
-	0% { -webkit-transform: scale3d(1,0,1); transform: scale3d(1,0,1);  opacity:0; }
-	25% { -webkit-transform: scale3d(1,1.2,1); transform: scale3d(1,1.2,1); }
-	50% { -webkit-transform: scale3d(1,0.85,1); transform: scale3d(1,0.85,1); }
-	75% { -webkit-transform: scale3d(1,1.05,1); transform: scale3d(1,1.05,1); }
-	100% { -webkit-transform: scale3d(1,1,1); transform: scale3d(1,1,1);  opacity:1; }
-}
-
-
-@-webkit-keyframes bounce { 
-	0% { -webkit-transform: translate3d(0,-25px,0); opacity:0; }
-	25% { -webkit-transform: translate3d(0,10px,0); }
-	50% { -webkit-transform: translate3d(0,-6px,0); }
-	75% { -webkit-transform: translate3d(0,2px,0); }
-	100% { -webkit-transform: translate3d(0,0,0); opacity: 1; }
-}
-
-@keyframes bounce { 
-	0% { -webkit-transform: translate3d(0,-25px,0); transform: translate3d(0,-25px,0); opacity:0; }
-	25% { -webkit-transform: translate3d(0,10px,0); transform: translate3d(0,10px,0); }
-	50% { -webkit-transform: translate3d(0,-6px,0); transform: translate3d(0,-6px,0); }
-	75% { -webkit-transform: translate3d(0,2px,0); transform: translate3d(0,2px,0); }
-	100% { -webkit-transform: translate3d(0,0,0); transform: translate3d(0,0,0); opacity: 1; }
-}
-@media (max-width: 600px) {
-	.form_wrapper {
-		.col_half {
-			width: 100%;
-			float: none;
-		}
-	}
-	.bottom_row {
-		.col_half {
-			width: 50%;
-			float: left;
-		}
-	}
-	.form_container {
-		.row {
-			.col_half.last {
-				border-left: none;
-			}
-		}
-	}
-	.remember_me {
-		padding-bottom: 20px;
-	}
+  .form1 {
+      width: 90%;
+      padding: 20px;
+  }
+ 
 }
