--- a/public/css/blogsite/home.css
+++ b/public/css/blogsite/home.css
@@ -306,7 +306,7 @@ a{
 
 /* Hover effects for images */
 .post-image img {
-    width: 100%;
+    width: 340px;
     height: 100%;
     object-fit: cover;
     transition: transform 0.3s ease;
